feat: add pagination for job endpoint
